<resources>
    <string name="app_name">Calcify</string>
    <string name="button0">0</string>
    <string name="button_7">7</string>
    <string name="button_9">9</string>
    <string name="button_8">8</string>
    <string name="button_5">5</string>
    <string name="button_4">4</string>
    <string name="button_6">6</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="clear_button">CLEAR</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="multiply_button">*</string>
    <string name="divide_button">/</string>
    <string name="equal_button">=</string>
    <string name="point_button">.</string>

</resources>
