<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/button0"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/point_button"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="396dp"
        android:text="@string/button_7"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="396dp"
        android:text="@string/button_9"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="396dp"
        android:text="@string/button_8"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="304dp"
        android:text="@string/button_5"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="304dp"
        android:text="@string/button_4"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="304dp"
        android:text="@string/button_6"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:text="@string/button_1"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="212dp"
        android:text="@string/button_2"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="212dp"
        android:text="@string/button_3"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Result_text"
        android:layout_width="136dp"
        android:layout_height="52dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/clear_button"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="73dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/plus_button"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Result_text" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="73dp"
        android:layout_height="66dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="13dp"
        android:text="@string/minus_button"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/plus_button"
        app:layout_constraintTop_toBottomOf="@+id/Result_text" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="73dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/multiply_button"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/minus_button"
        app:layout_constraintTop_toBottomOf="@+id/Result_text" />

    <Button
        android:id="@+id/divide_button"
        android:layout_width="73dp"
        android:layout_height="66dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/divide_button"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/multiply_button"
        app:layout_constraintTop_toBottomOf="@+id/clear_button" />

    <Button
        android:id="@+id/equal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="25dp"
        android:text="@string/equal_button"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/point_button"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/point_button"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

</android.support.constraint.ConstraintLayout>